kubernetes/apps/home/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  ingressClassName: internal
  rules:
    - host: emqx.donoso.family
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
